--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --header-height: 3rem;
+  --nav-width: 68px;
+
+  --first-color: #2A74DF;
+  --second-color: #1B59B1;
+  --third-color: #E9F1FC;
+  --black: #000;
+  --white: #fff;
+  --gray: #E0E0E0;
+  --button: #2A74DF;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+.container-flex {
+  display: flex;
+}
+
+main {
+  width: 100%;
+  padding: 20px;
 }
